fixed spacing issue on navbar elements

--- a/front-end/src/Components/Navbar.css
+++ b/front-end/src/Components/Navbar.css
@@ -1,11 +1,32 @@
-.navFlex {
+.navbar {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   width: 100vw;
   height: 100px;
   left: 0;
+}
+
+.titleFlex {
+  width: 42vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.buttonsGrid {
+  width: 58vw;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.buttonFlex {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 .siteTitle {
